fix title too big

--- a/public/style.css
+++ b/public/style.css
@@ -73,7 +73,7 @@ img {
 }
 
 .title {
-    font-size: 4em;
+    font-size: 3em;
     letter-spacing: 36px;
     margin-right: -36px;
     padding-bottom: 2px;
